--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <div class="cards">
       <div class="front">
-        <img src="/HTML/Detalhes de Cartão Interativo/images/card-logo.svg" alt="card-logo.svg">
+        <img src="images/card-logo.svg" alt="card-logo.svg">
         <p id="card_number">0000 0000 0000 0000</p>
 
         <div class="name_date">
@@ -69,7 +69,7 @@
       </div>
 
       <div class="thank_you hide">
-        <img src="/HTML/Detalhes de Cartão Interativo/images/icon-complete.svg" alt="icon-complete.svg">
+        <img src="images/icon-complete.svg" alt="icon-complete.svg">
         <h2>Thank You!</h2>
         <p>We've added your card details</p>
       </div>
